--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base2.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base2.html
@@ -37,11 +37,11 @@
     <script src="{% static 'aialieneer/js/ai-eng-2.min.js' %}"></script>
     
     <!-- Page level plugins -->
-    <script src="{static 'vendor/chart.js/Chart.min.js'}"></script>
+    <script src="{% static 'vendor/chart.js/Chart.min.js' %}"></script>
 
     <!-- Page level custom scripts -->
-    <script src="{static 'js/demo/chart-area-demo.js'}"></script>
-    <script src="{static' 'js/demo/chart-pie-demo.js'}"></script>
+    <script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
+    <script src="{% static' 'js/demo/chart-pie-demo.js' %}"></script>
     {% endblock %}
 
 </html>
