create cusjquery.js  and Add code And ceate base.html

--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
@@ -255,6 +255,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script type="text/javascript" src="{% static 'aialieneer/js/masonry.pkgd.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'aialieneer/js/jquery.collapsible.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'aialieneer/js/custom.js' %}"></script>
+<script type="text/javascript" src="{% static 'aialieneer/vendor/jquery/cusjquery.js' %}"></script>
 {% endblock %}
 
     
